# sdk

./: .gitignore  README.md  README_local.md  advertised_sdk.txt  build.sh  mise.toml  removed_3_4.txt  removed_sdk4_0.txt  sdk.txt  sdk3_4.txt  sdk4_0.txt  sdk4_1.txt  sdk4_3.txt  sdk4_3_default.txt  sdk4_4.txt  sdk4_4_default.txt  sdk4_5_default.txt  sphinx_docs_conf.py
iqm_benchmarks/: AUTHORS.rst  CHANGELOG.md  LICENSE.txt  MANIFEST.in  PKG-INFO  README.md  pyproject.toml
iqm_benchmarks/docs/: API.rst  conf.py  index.rst  readme.md
iqm_benchmarks/docs/development/: development.rst  generate_2qubit_cliffords.ipynb  how_to_make_your_own_benchmark.ipynb
iqm_benchmarks/docs/devices/: devices.rst  star.ipynb
iqm_benchmarks/docs/examples/: example_clifford_rb.ipynb  example_clops.ipynb  example_coherence.ipynb  example_eplg.ipynb  example_ghz.ipynb  example_graphstate.ipynb  example_gst.ipynb  example_interleaved_rb.ipynb  example_mirror_rb.ipynb  example_qscore.ipynb  example_quantum_volume.ipynb  examples.rst
iqm_benchmarks/mise/tasks/: format  lint  test
iqm_benchmarks/src/iqm/benchmarks/: __init__.py  benchmark_definition.py  circuit_containers.py  logging_config.py  readout_mitigation.py  utils.py  utils_plots.py  utils_shadows.py
iqm_benchmarks/tests/: test_coherence.py  test_ghz.py  test_graph_states.py  test_gst.py  test_qscore.py  test_qv.py  test_rb.py
iqm_benchmarks/tests/unit/: test_backend_transpilation.py  test_benchmark_circuit.py  test_gst_processing.py  test_submit_execute.py
iqm_client/: CHANGELOG.md  CHANGELOG.rst  INTEGRATION_GUIDE.rst  PKG-INFO  README.rst  pyproject.toml  version.txt
iqm_client/docs/: API.rst  changelog.rst  conf.py  index.rst  user_guide_cirq.rst  user_guide_qiskit.rst
iqm_client/docs/_templates/: autosummary-class-template.rst  autosummary-module-template.rst
iqm_client/mise/tasks/: format  lint  test
iqm_client/requirements/: base.in.internal  base.txt  cirq.in  cirq.txt  cli.in  cli.txt  qiskit.in  qiskit.txt
iqm_client/src/iqm/cirq_iqm/: __init__.py  extended_qasm_parser.py  iqm_gates.py  iqm_sampler.py  optimizers.py  serialize.py  transpiler.py
iqm_client/src/iqm/iqm_client/: __init__.py  api.py  authentication.py  errors.py  iqm_client.py  (+4 more)
iqm_client/src/iqm_client.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
iqm_client/tests/: conftest.py
iqm_client/tests/cirq_iqm/: conftest.py  test_adonis.py  test_aphrodite.py  test_apollo.py  test_iqm_device.py  test_iqm_device_metadata.py  test_iqm_operation_mapping.py  test_iqm_sampler.py  test_openqasm.py  test_optimization.py
iqm_client/tests/iqm_client/: conftest.py  test_iqm_client.py  test_models.py  test_transpiler.py  test_util.py  test_validation.py
iqm_client/tests/iqm_server_client/: test_iqm_server_client.py  test_normalize_url.py
iqm_client/tests/qiskit_iqm/: conftest.py  test_bell_measure_example.py  test_examples.py  test_iqm_backend.py  test_iqm_backend_base.py  test_iqm_facade_backend.py  test_iqm_job.py  test_iqm_move_layout.py  test_iqm_naive_move_pass.py  test_iqm_provider.py  test_iqm_target.py  test_iqm_transpilation.py  test_qiskit_to_iqm.py  test_transpiler_example.py  utils.py
iqm_data_definitions/: PKG-INFO  pyproject.toml
iqm_data_definitions/docs/: conf.py
iqm_data_definitions/src/iqm_data_definitions.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
iqm_pulla/: CHANGELOG.md  CHANGELOG.rst  PKG-INFO  README.rst  pyproject.toml
iqm_pulla/_old_tests_archive/: .pylintrc  conftest.py
iqm_pulla/_old_tests_archive/resources/: chip_design_record.json  chip_design_record_star.json  crystal_20.json  crystal_20_prometheus_metrics.prom  crystal_5.json  crystal_5_calibration.json  spark_calibration_set_raw.json  spark_chip_design_record.json  spark_settings.json  star.json
iqm_pulla/_old_tests_archive/unit/: __init__.py
iqm_pulla/docs/: Compilation Stages.ipynb  Configuration and Usage.ipynb  Custom Gates and Implementations.ipynb  Example - Compilation With Local Calibration Set.ipynb  Example - Executing QIR programs.ipynb  Example - Measuring T1.ipynb  Example - Randomized Benchmarking.ipynb  Example - Simple Dynamical Decoupling.ipynb  Quick Start.ipynb  Sweeps.ipynb  conf.py  examples.rst  index.rst  user_guides.rst
iqm_pulla/mise/tasks/: format  lint  test
iqm_pulla/requirements/: base.in  base.in.internal  base.txt  notebook.txt  qir.in  qir.txt  qiskit.in.internal  qiskit.txt
iqm_pulla/src/iqm_pulla.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
iqm_pulla/tests/: conftest.py
iqm_qaoa/: CHANGELOG.md  CHANGELOG.rst  PKG-INFO  README.rst  pyproject.toml
iqm_qaoa/docs/: Portfolio Optimization.ipynb  SK Model and Transpilation.ipynb  Sparse Maxcut.ipynb  Training the QAOA.ipynb  Which Qubits on the QPU Are Used.ipynb  conf.py  examples.rst  index.rst  references.bib
iqm_qaoa/docs/_templates/: autosummary-module-template.rst
iqm_qaoa/mise/tasks/: lint
iqm_qaoa/requirements/: base.in  base.txt  notebook.txt
iqm_qaoa/src/iqm_qaoa.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
iqm_qaoa/tests/: conftest.py
iqm_qaoa/tests/applications/: test_applications.py  test_graph_utils.py  test_maxcut.py  test_mis.py  test_qubo.py  test_sk.py
iqm_qaoa/tests/qaoa/: test_backends.py  test_circuits.py  test_generic_qaoa.py  test_qubo_qaoa.py  test_transforming_functions.py  test_tree_qaoa.py
iqm_qubit_selector/: CHANGELOG.md  LICENSE.txt  MANIFEST.in  PKG-INFO  README.rst  pyproject.toml  setup.py
iqm_qubit_selector/docs/: API.rst  changelog.rst  conf.py  examples.rst  index.rst  qubit_selector_example.ipynb  qubit_selector_quick_start.ipynb  user_guide.rst
iqm_qubit_selector/docs/_templates/: autosummary-class-template.rst
iqm_qubit_selector/e2e_test/: test_e2e.py
iqm_qubit_selector/mise/tasks/: format  test
iqm_qubit_selector/tests/resources/: calibration_sirius.json  calibration_sorted_crystal.json  calibration_sorted_deneb_with_extra_fields.json  calibration_sorted_emerald.json  calibration_sorted_sirius.json  calibration_sorted_star.json  serialized_circuits_crystal.json  serialized_circuits_star.json
(+497 files in other folders)
