[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
    "Intended Audience :: Science/Research",
]
description = "Benchmarks and characterization on IQM quantum processors"
name = "iqm-benchmarks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cvxpy>=1.5.3",
    "iqm-client[qiskit]",
    "iqm-pulla",
    "iqm-pulse",
    "iqm-station-control-client",
    "lmfit>=1.2",
    "matplotlib<4,>=3.9.2",
    "more-itertools<11.0.0,>=10.1.0",
    "mthree>=3.0",
    "myst-nb>=1.2.0",
    "networkx<4.0,>=3.3",
    "numba>=0.61.0",
    "numpy<3.0,>=2.0",
    "pycurl<8.0,>=7.45.3",
    "pyyaml!=5.4.0,!=5.4.1,!=6.0.0",
    "qiskit-ibm-runtime<=0.43.1",
    "qiskit<2.2,>=1.2.4",
    "requests<3.0,>=2.32.3",
    "rustworkx<=1.0",
    "scikit-optimize<0.11.0,>=0.10.2",
    "tabulate<1.0.0,>=0.9.0",
    "tqdm>=4.66.5",
    "types-requests",
    "uncertainties<3.3.0,>=3.2.2",
    "xarray>=2024.10.0",
]
authors = [
    { name = "IQM Finland Oy", email = "developers@meetiqm.com" },
]
version = "2.59.2"

[project.optional-dependencies]
examples = [
    "notebook",
]

[project.license]
file = "LICENSE.txt"

[project.urls]
Documentation = "https://docs.meetiqm.com/iqm-benchmarks/"
Homepage = "https://pypi.org/project/iqm-benchmarks/"

[tool.hatch.build.targets.wheel]
packages = [
    "src/iqm",
]

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_defs = true
explicit_package_bases = true
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"
namespace_packages = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "daemon.*",
    "quimb.*",
    "qiskit.*",
    "qiskit_aer.*",
    "grpc.*",
    "lmfit.*",
    "emukit.*",
    "mockito.*",
    "sklearn.*",
    "dill.*",
    "uncertainties.*",
    "GPy.*",
    "pythonjsonlogger.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "iqm.data_definitions.*",
    "iqm.models.*",
]
follow_imports = "skip"
follow_imports_for_stubs = true

[tool.ruff]
exclude = [
    "*.ipynb",
    "*.rst",
]
extend-include = [
    "sub-setup-py.template",
]
line-length = 120

[tool.ruff.lint]
ignore = [
    "D203",
    "D213",
]
select = [
    "E4",
    "E7",
    "E9",
    "E5",
    "E1",
    "F",
    "Q",
    "PL",
    "I",
    "D",
    "UP007",
    "UP006",
    "UP035",
    "W",
    "B",
    "C",
    "S",
    "N",
    "ANN001",
    "ANN201",
    "ANN202",
    "NPY201",
]
unfixable = [
    "F401",
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
known-first-party = [
    "exa.experiments",
    "exa.core",
    "exa.common",
    "iqm.cocos",
    "gbc",
    "calibration_graphs",
    "iqm.pulse",
    "iqm.cpc",
    "iqm.pulla",
    "iqm.station_control",
    "tests",
]
known-local-folder = [
    "src",
]
known-third-party = [
    "exa",
    "iqm",
]
relative-imports-order = "closest-to-furthest"

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = [
    "F401",
]
"src/*" = [
    "D400",
    "D401",
    "D107",
    "C901",
]
"tests/*" = [
    "PLR2004",
    "D400",
    "D401",
    "D107",
    "S101",
]

[tool.ruff.lint.pylint]
max-args = 8
max-branches = 16
max-locals = 21
max-returns = 9
max-statements = 60

[tool.coverage.paths]
source = [
    "src/",
    "*/site-packages/",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self\\.debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]

[tool.coverage.run]
branch = true
source = [
    "iqm",
]

[tool.pytest.ini_options]
nb_diff_ignore = [
    "/metadata/language_info",
    "/metadata/widgets",
    "/cells/*/execution_count",
    "/cells/*/outputs",
]
