[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Physics",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
]
description = "Client library for accessing an IQM quantum computer"
name = "iqm-client"
readme = "README.rst"
requires-python = ">=3.10, <3.14"
dependencies = [
    "iqm-pulse",
    "iqm-station-control-client",
    "numpy<3,>=2.0",
    "packaging<25,>=24.0",
    "pydantic<2.13.0,>=2.12.4",
    "requests<3,>=2.32.3",
]
authors = [
    { name = "IQM Finland Oy", email = "developers@iqm.tech" },
]
version = "34.0.4"

[project.optional-dependencies]
cirq = [
    "cirq-core[contrib]~=1.2",
    "llvmlite<0.47,>=0.44.0",
    "numba<0.64,>=0.61.0",
    "ply==3.11",
]
cli = [
    "click<9,>=8.1.6",
    "jsonschema<5,>=4.6.0",
    "psutil<8,>=5.9.2",
    "python-daemon<3.2,>=2.3.0",
    "types-psutil",
]
qiskit = [
    "qiskit-aer<0.18,>=0.13.1",
    "qiskit<2.2,>=1.0",
]

[project.license]
file = "LICENSE.txt"

[project.scripts]
iqmclient = "iqm.iqm_client.cli.cli:iqmclient"

[project.urls]
Documentation = "https://docs.iqm.tech/iqm-client/"
Homepage = "https://pypi.org/project/iqm-client/"

[project.entry-points."qiskit.transpiler.scheduling"]
iqm_default_scheduling = "iqm.qiskit_iqm:IQMDefaultSchedulingPlugin"
move_routing = "iqm.qiskit_iqm:MoveGateRoutingPlugin"
move_routing_exact_global_phase = "iqm.qiskit_iqm:MoveGateRoutingWithExactRZPlugin"
move_routing_keep = "iqm.qiskit_iqm:MoveGateRoutingKeepExistingMovesPlugin"
move_routing_remove = "iqm.qiskit_iqm:MoveGateRoutingRemoveExistingMovesPlugin"
move_routing_rz_optimization_ignores_barriers = "iqm.qiskit_iqm:MoveGateRoutingWithRZOptimizationIgnoreBarriersPlugin"
move_routing_trust = "iqm.qiskit_iqm:MoveGateRoutingTrustExistingMovesPlugin"
only_move_routing = "iqm.qiskit_iqm:MoveGateRoutingOnlyPlugin"
only_move_routing_keep = "iqm.qiskit_iqm:MoveGateRoutingOnlyKeepExistingMovesPlugin"
only_move_routing_remove = "iqm.qiskit_iqm:MoveGateRoutingOnlyRemoveExistingMovesPlugin"
only_move_routing_trust = "iqm.qiskit_iqm:MoveGateRoutingOnlyTrustExistingMovesPlugin"
only_rz_optimization = "iqm.qiskit_iqm:OnlyRZOptimizationPlugin"
only_rz_optimization_exact_global_phase = "iqm.qiskit_iqm:OnlyRZOptimizationExactPlugin"
only_rz_optimization_exact_global_phase_ignore_barriers = "iqm.qiskit_iqm:OnlyRZOptimizationExactIgnoreBarriersPlugin"
only_rz_optimization_ignore_barriers = "iqm.qiskit_iqm:OnlyRZOptimizationIgnoreBarriersPlugin"

[tool.hatch.build.targets.wheel]
packages = [
    "src/iqm",
]

[tool.mypy]
explicit_package_bases = true
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"
namespace_packages = true

[[tool.mypy.overrides]]
module = [
    "daemon.*",
    "quimb.*",
    "qiskit.*",
    "qiskit_aer.*",
    "grpc.*",
    "lmfit.*",
    "emukit.*",
    "mockito.*",
    "sklearn.*",
    "dill.*",
    "uncertainties.*",
    "pythonjsonlogger.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "iqm.data_definitions.*",
    "iqm.models.*",
]
follow_imports = "skip"
follow_imports_for_stubs = true

[tool.ruff]
exclude = [
    "*.ipynb",
    "*.rst",
]
extend-include = [
    "sub-setup-py.template",
]
line-length = 120

[tool.ruff.lint]
ignore = [
    "D107",
    "D203",
    "D213",
    "ANN002",
    "ANN003",
    "ANN204",
    "ANN401",
]
select = [
    "E4",
    "E7",
    "E9",
    "E5",
    "F",
    "Q",
    "PL",
    "I",
    "D",
    "UP007",
    "UP006",
    "UP035",
    "ANN",
    "NPY",
]
unfixable = [
    "F401",
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = [
    "exa.experiments",
    "exa.core",
    "exa.common",
    "iqm.cocos",
    "gbc",
    "calibration_graphs",
    "iqm.pulse",
    "iqm.cpc",
    "iqm.pulla",
    "iqm.station_control",
    "tests",
]
known-local-folder = [
    "src",
]
known-third-party = [
    "exa",
    "iqm",
]
relative-imports-order = "closest-to-furthest"

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = [
    "F401",
]
"src/*" = [
    "D105",
    "D401",
]
"tests/*" = [
    "PLR2004",
    "PLR0402",
    "PLC0414",
    "D",
    "ANN001",
    "ANN201",
    "ANN202",
    "ANN205",
    "ANN206",
]

[tool.ruff.lint.pylint]
max-args = 8
max-branches = 16
max-locals = 21
max-returns = 9
max-statements = 60

[tool.coverage.paths]
source = [
    "src/",
    "*/site-packages/",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self\\.debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]

[tool.coverage.run]
branch = true
source = [
    "iqm",
]

[tool.pytest.ini_options]
nb_diff_ignore = [
    "/metadata/language_info",
    "/metadata/widgets",
    "/cells/*/execution_count",
    "/cells/*/outputs",
]
