[build-system]
requires = ["setuptools>=65.4.1", "setuptools_scm[toml]>=7"]
build-backend = "setuptools.build_meta"

[project]
name = "iqm-data-definitions"
dynamic = ["version"]
description = "Common repository for data definitions inside IQM"
authors = [{ name = "IQM Finland Oy", email = "developers@meetiqm.com" }]
license = { file = "LICENSE.txt" }
readme = "README.md" # TODO disable readme from the wheel? Currently twine commands fail if we do so.
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Physics",
    "Intended Audience :: Science/Research",
]
requires-python = ">=3.11.0"
dependencies = [
    "protobuf >= 4.25.3,<5.0",
    "types-protobuf",
    "numpy >= 1.26.4,<3.0",
    "scipy >= 1.11.4,<1.16.2",
    "scipy-stubs",
]

[project.urls]
Homepage = "https://pypi.org/project/iqm-data-definitions/"
Documentation = "https://iqm-finland.github.io/docs/"

[project.optional-dependencies]
testing = [
    "pytest == 7.4.0",
    "pytest-cov == 4.1.0",
    "mypy == 1.18.2",
    "ruff == 0.13.1",
]
docs = [
    "sphinx == 7.2.6",
    "sphinx-book-theme == 1.1.2",
]
cicd = [
    "build[virtualenv] == 1.3.0",
    "tox == 4.30.2",
    "tox-current-env",
    "twine == 6.2.0",
    "importlib-metadata == 8.7.0",
    "python-gitlab == 3.2.0",
    "packaging == 25.0",
    "mypy-protobuf == 3.6.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["iqm*"]

[tool.setuptools.package-data]
"iqm.data_definitions" = ["descriptor_set.bin"]

[tool.setuptools_scm]
# See configuration details in https://github.com/pypa/setuptools_scm
version_scheme = "no-guess-dev"

[tool.mypy]
explicit_package_bases = true
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"
namespace_packages = true

[tool.ruff]
exclude = [ "*.ipynb", "*.rst",]
line-length = 120

[tool.ruff.lint]
ignore = [ "D203", "D213",]
select = [ "E4", "E7", "E9", "E5", "F", "Q", "PL", "I", "D", "UP007", "UP006", "UP035", "ANN001", "ANN201", "ANN202",]
unfixable = [ "F401",]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = [ "iqm.models", "tests",]
known-local-folder = [ "src",]
known-third-party = [ "exa", "iqm",]
relative-imports-order = "closest-to-furthest"

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = [ "F401", "PLR0402",]
"**/docs/*" = [ "E402", "D100",]
"**/setup.py" = [ "D100", "D103", "I001", "ANN201",]
"**/src/*" = [ "PLR2004", "D400", "D415", "D205", "D401", "D417", "D100", "D101", "D107", "D102", "D105", "D103", "D404", "D104",]
"**/tests/*" = [ "F632", "PLR2004", "PLR0402", "PLC0414", "D", "ANN001", "ANN201", "ANN202",]

[tool.ruff.lint.pylint]
max-args = 8
max-branches = 16
max-locals = 21
max-returns = 9
max-statements = 60
