[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Physics",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
]
description = "Client library for pulse-level access to an IQM quantum computer"
name = "iqm-pulla"
readme = "README.rst"
requires-python = ">=3.11, <3.14"
dependencies = [
    "ipython",
    "iqm-client",
    "iqm-data-definitions<3,>=2.22",
    "iqm-exa-common",
    "iqm-pulse",
    "iqm-station-control-client",
    "pylatexenc<3,>=2.10",
    "scipy-stubs",
    "scipy<2,>=1.13.0",
    "xarray==2024.10.0",
]
authors = [
    { name = "IQM Finland Oy", email = "developers@iqm.tech" },
]
version = "13.0.4"

[project.optional-dependencies]
notebook = [
    "matplotlib<4,>=3.9.2",
    "nbclient~=0.5.10",
    "notebook<8,>=7",
]
qir = [
    "iqm-pyqir==0.12.0",
    "iqm-qiskit-qir==0.9.0",
    "qiskit<2.2,>=1.0",
]
qiskit = [
    "iqm-client[qiskit]",
]

[project.license]
file = "LICENSE.txt"

[project.urls]
Documentation = "https://docs.iqm.tech/iqm-pulla/"
Homepage = "https://pypi.org/project/iqm-pulla/"

[tool.hatch.build.targets.wheel]
packages = [
    "src/iqm",
]

[tool.mypy]
explicit_package_bases = true
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"
namespace_packages = true

[[tool.mypy.overrides]]
module = [
    "daemon.*",
    "quimb.*",
    "qiskit.*",
    "qiskit_aer.*",
    "grpc.*",
    "lmfit.*",
    "emukit.*",
    "mockito.*",
    "sklearn.*",
    "dill.*",
    "uncertainties.*",
    "pythonjsonlogger.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "iqm.data_definitions.*",
    "iqm.models.*",
]
follow_imports = "skip"
follow_imports_for_stubs = true

[tool.ruff]
exclude = [
    "*.ipynb",
    "*.rst",
    "_old_tests_archive",
]
extend-include = [
    "sub-setup-py.template",
]
line-length = 120

[tool.ruff.lint]
ignore = [
    "D107",
    "D203",
    "D213",
]
select = [
    "E4",
    "E7",
    "E9",
    "E5",
    "F",
    "Q",
    "PL",
    "I",
    "D",
    "UP007",
    "UP006",
    "UP035",
    "ANN001",
    "ANN201",
    "ANN202",
    "NPY",
]
unfixable = [
    "F401",
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = [
    "exa.experiments",
    "exa.core",
    "exa.common",
    "iqm.cocos",
    "gbc",
    "calibration_graphs",
    "iqm.pulse",
    "iqm.cpc",
    "iqm.pulla",
    "iqm.station_control",
    "tests",
]
known-local-folder = [
    "src",
]
known-third-party = [
    "exa",
    "iqm",
]
relative-imports-order = "closest-to-furthest"

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = [
    "F401",
]
"src/*" = [
    "PLR2004",
    "D400",
    "D415",
    "D205",
    "D401",
    "D417",
    "D100",
    "D105",
    "D102",
]
"tests/*" = [
    "F632",
    "PLR2004",
    "PLR0402",
    "PLC0414",
    "D",
    "ANN001",
    "ANN201",
    "ANN202",
]

[tool.ruff.lint.pylint]
max-args = 8
max-branches = 16
max-locals = 21
max-returns = 9
max-statements = 60

[tool.coverage.paths]
source = [
    "src/",
    "*/site-packages/",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self\\.debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]

[tool.coverage.run]
branch = true
source = [
    "iqm",
]

[tool.pytest.ini_options]
nb_diff_ignore = [
    "/metadata/language_info",
    "/metadata/widgets",
    "/cells/*/execution_count",
    "/cells/*/outputs",
]
