[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
    "Intended Audience :: Science/Research",
]
description = "Enable optimal qubit layout selection within the QPU"
name = "iqm-qubit-selector"
readme = "README.rst"
requires-python = ">=3.11, <3.14"
dependencies = [
    "iqm-client[qiskit]",
    "iqm-pulla",
    "iqm-pulse",
    "iqm-station-control-client",
    "numpy<3.0,>=2.0",
    "qiskit>=1.2.4",
    "rustworkx<=1.0",
]
authors = [
    { name = "IQM Finland Oy", email = "developers@meetiqm.com" },
]
version = "1.0.1"

[project.optional-dependencies]
notebook = [
    "matplotlib>=3.6",
    "notebook>=6.5.2",
]

[project.license]
file = "LICENSE.txt"

[project.urls]
Documentation = "https://docs.meetiqm.com/iqm-qubit-selector/"
Homepage = "https://pypi.org/project/iqm-qubit-selector/"

[tool.hatch.build.targets.wheel]
packages = [
    "src/iqm",
]

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_defs = true
explicit_package_bases = true
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"
namespace_packages = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "daemon.*",
    "quimb.*",
    "qiskit.*",
    "qiskit_aer.*",
    "grpc.*",
    "lmfit.*",
    "emukit.*",
    "mockito.*",
    "sklearn.*",
    "dill.*",
    "uncertainties.*",
    "GPy.*",
    "pythonjsonlogger.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "iqm.data_definitions.*",
    "iqm.models.*",
]
follow_imports = "skip"
follow_imports_for_stubs = true

[tool.ruff]
exclude = [
    "*.ipynb",
    "*.rst",
]
extend-include = [
    "sub-setup-py.template",
]
line-length = 120

[tool.ruff.lint]
ignore = [
    "D107",
    "D203",
    "D213",
]
select = [
    "E4",
    "E7",
    "E9",
    "E5",
    "E1",
    "F",
    "Q",
    "PL",
    "I",
    "D",
    "UP007",
    "UP006",
    "UP035",
    "W",
    "B",
    "C",
    "S",
    "N",
    "ANN001",
    "ANN201",
    "ANN202",
    "NPY201",
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
known-first-party = [
    "exa.experiments",
    "exa.core",
    "exa.common",
    "iqm.cocos",
    "gbc",
    "calibration_graphs",
    "iqm.pulse",
    "iqm.cpc",
    "iqm.pulla",
    "iqm.station_control",
    "tests",
]
known-local-folder = [
    "src",
]
known-third-party = [
    "exa",
    "iqm",
]
relative-imports-order = "closest-to-furthest"

[tool.ruff.lint.per-file-ignores]
"e2e_test/*" = [
    "F401",
    "F811",
    "S101",
]
"tests/*" = [
    "ANN001",
    "D104",
    "PLR2004",
    "S101",
]

[tool.ruff.lint.pylint]
max-args = 8
max-branches = 16
max-locals = 21
max-returns = 9
max-statements = 60

[tool.coverage.paths]
source = [
    "src/",
    "*/site-packages/",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self\\.debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]

[tool.coverage.run]
branch = true
source = [
    "iqm",
]

[tool.pytest.ini_options]
nb_diff_ignore = [
    "/metadata/language_info",
    "/metadata/widgets",
    "/cells/*/execution_count",
    "/cells/*/outputs",
]
